adds figures and tables for set tool example

--- a/docs/00-outline.tex
+++ b/docs/00-outline.tex
@@ -22,7 +22,7 @@
 
 \chapter{Benchmark Results}
 \label{chapter:benchmark-results}
-\input{4-benchmark-results/40-benchmark.tex}
+% \input{4-benchmark-results/40-benchmark.tex}
 
 \chapter{Examples with \acs{osier}}
 \label{chapter:examples}
