--- a/docs/2025-dotson-phd.bib
+++ b/docs/2025-dotson-phd.bib
@@ -2906,7 +2906,7 @@ Publisher: United States. Department of Commerce.},
 	urldate = {2021-12-21},
 	date = {2018-03-01},
 	langid = {english},
-	keywords = {Cluster analysis, Energy systems, Extreme periods, Mixed integer linear programming, Renewable energies, Time-series aggregation, Typical periods},
+	keywords = {Energy systems, Cluster analysis, Extreme periods, Mixed integer linear programming, Renewable energies, Time-series aggregation, Typical periods},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/YZWI7S46/Kotzur et al. - 2018 - Impact of different time series aggregation method.pdf:application/pdf},
 }
 
@@ -2925,7 +2925,7 @@ Publisher: United States. Department of Commerce.},
 	urldate = {2021-12-17},
 	date = {2019-02-01},
 	langid = {english},
-	keywords = {Data warehouse, Energy system optimization, Integrated assessment, Open-source, Scenario management, Strategic planning tool},
+	keywords = {Open-source, Data warehouse, Energy system optimization, Integrated assessment, Scenario management, Strategic planning tool},
 	file = {Accepted Version:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5YSEU6SQ/Huppmann et al. - 2019 - The MESSAGEix Integrated Assessment Model and the .pdf:application/pdf},
 }
 
@@ -3952,7 +3952,7 @@ collective effort of all parties involved is greatly appreciated.},
 	author = {Ruth, Mark F. and Zinaman, Owen R. and Antkowiak, Mark and Boardman, Richard D. and Cherry, Robert S. and Bazilian, Morgan D.},
 	urldate = {2019-07-20},
 	date = {2014-02-01},
-	keywords = {Hybrid energy systems, Nuclear power, Polygeneration systems},
+	keywords = {Nuclear power, Hybrid energy systems, Polygeneration systems},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JQ3S73AI/Ruth et al. - 2014 - Nuclear-renewable hybrid energy systems Opportuni.pdf:application/pdf;ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/A6MLTJI6/Ruth et al. - 2014 - Nuclear-renewable hybrid energy systems Opportuni.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/HHC32SYC/S0196890413007516.html:text/html;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JHAK53X9/S0196890413007516.html:text/html},
 }
 
@@ -4734,7 +4734,7 @@ and {MARKAL}, a widely used commercial model of the same type. In addition, a st
 	urldate = {2021-05-20},
 	date = {2021},
 	note = {Publisher: Frontiers},
-	keywords = {Capacity expansion, Decarbonization, Electric power systems, Hydrogen, storage},
+	keywords = {Hydrogen, Decarbonization, storage, Capacity expansion, Electric power systems},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PDJK9TKT/Schulthoff et al. - 2021 - Role of Hydrogen in a Low-Carbon Electric Power Sy.pdf:application/pdf},
 }
 
@@ -4771,7 +4771,7 @@ and {MARKAL}, a widely used commercial model of the same type. In addition, a st
 	urldate = {2021-05-18},
 	date = {2019-10-16},
 	langid = {english},
-	keywords = {electrolysis, energy carrier, fuel cost assessment, hydrogen, production cost, retail electric utility rates},
+	keywords = {hydrogen, electrolysis, energy carrier, fuel cost assessment, production cost, retail electric utility rates},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/64Z3FWW3/Guerra et al. - 2019 - Cost Competitiveness of Electrolytic Hydrogen.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/MSXTFWYY/S2542435119303228.html:text/html},
 }
 
@@ -4917,7 +4917,7 @@ safe and sustainable future.},
 	urldate = {2021-05-10},
 	date = {2020-08-01},
 	langid = {english},
-	keywords = {Buses, Carbon dioxide emissions, Electric buses, Hydrogen buses},
+	keywords = {Carbon dioxide emissions, Buses, Electric buses, Hydrogen buses},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/KNIW96ZY/Logan et al. - 2020 - Electric and hydrogen buses Shifting from convent.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/QNMQ29DI/S136192092030537X.html:text/html},
 }
 
@@ -4938,7 +4938,7 @@ safe and sustainable future.},
 	langid = {english},
 	note = {Number: 14
 Publisher: Multidisciplinary Digital Publishing Institute},
-	keywords = {applications, barriers, classification, energy storage, intermittency mitigation, policies, renewable energy},
+	keywords = {renewable energy, energy storage, barriers, applications, classification, intermittency mitigation, policies},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GW3B7SQ4/Hossain et al. - 2020 - A Comprehensive Review on Energy Storage Systems .pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/HIKGI43E/htm.html:text/html},
 }
 
@@ -4956,7 +4956,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2021-05-09},
 	date = {2018-02-01},
 	langid = {english},
-	keywords = {Governance, Literature review, Stakeholder participation, Transition, Urban sustainability},
+	keywords = {Literature review, Transition, Governance, Stakeholder participation, Urban sustainability},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/7J33P3DY/Soma et al. - 2018 - Stakeholder contributions through transitions towa.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5CBZHNN4/S2210670716307521.html:text/html},
 }
 
@@ -4975,7 +4975,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	author = {Lennon, Breffní and Dunphy, Niall P. and Sanvicente, Estibaliz},
 	urldate = {2021-05-09},
 	date = {2019-09-09},
-	keywords = {Business configurations, Citizen empowerment, Community development, Community energy, Cooperative mechanisms, Energy transition, Participatory business models, Sustainable communities, Transformative social innovation},
+	keywords = {Energy transition, Community energy, Business configurations, Citizen empowerment, Community development, Cooperative mechanisms, Participatory business models, Sustainable communities, Transformative social innovation},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/6X6L3UI6/Lennon et al. - 2019 - Community acceptability and the energy transition.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/T485RX9Q/s13705-019-0218-z.html:text/html},
 }
 
@@ -5014,7 +5014,7 @@ Publisher: Nature Publishing Group},
 	urldate = {2021-05-09},
 	date = {2017-09-01},
 	langid = {english},
-	keywords = {Decision-making, Energy policy, Perspectives, Public acceptance, Q methodology, Stakeholders},
+	keywords = {Energy policy, Decision-making, Public acceptance, Perspectives, Q methodology, Stakeholders},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/JPP2P5NS/Díaz et al. - 2017 - Do stakeholders’ perspectives on renewable energy .pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2DCRIYFU/S0301421517303178.html:text/html},
 }
 
@@ -5128,7 +5128,7 @@ Publisher: Nature Publishing Group},
 	urldate = {2021-05-09},
 	date = {2016-12-01},
 	langid = {english},
-	keywords = {Biofuels, {CO} emissions, Decarbonization, Energy transitions, Fossil fuels, Intermittent electricity generation},
+	keywords = {Fossil fuels, Energy transitions, Decarbonization, {CO} emissions, Biofuels, Intermittent electricity generation},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/WJKBUQJ2/Smil - 2016 - Examining energy transitions A dozen insights bas.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/BL3FN388/S2214629616302006.html:text/html},
 }
 
@@ -5147,7 +5147,7 @@ Publisher: Nature Publishing Group},
 	urldate = {2021-05-09},
 	date = {2016-12-01},
 	langid = {english},
-	keywords = {Energy futures, Energy modeling, Scenarios, Shell},
+	keywords = {Energy modeling, Energy futures, Scenarios, Shell},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/U8JXJ7DB/Jefferson - 2016 - Energy realities or modelling Which is more usefu.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/5FU6FXIP/S221462961630189X.html:text/html},
 }
 
@@ -5215,7 +5215,7 @@ Reduce the lead time when conducting scenario analysis.},
 	urldate = {2021-05-03},
 	date = {2015-07-01},
 	langid = {english},
-	keywords = {Epistemology, Foresight, Theorizing, Theory development},
+	keywords = {Foresight, Epistemology, Theorizing, Theory development},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/H7SHY8LH/Piirainen and Gonzalez - 2015 - Theory of and within foresight — “What does a theo.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/GVQPMC7C/S0040162515000621.html:text/html},
 }
 
@@ -5268,7 +5268,7 @@ Reduce the lead time when conducting scenario analysis.},
 	date = {2016-01-01},
 	langid = {english},
 	doi = {10.1016/B978-0-08-100176-9.00003-7},
-	keywords = {Complex systems, Fact-finding, Problem definition, Stakeholders, Synthesis},
+	keywords = {Complex systems, Stakeholders, Fact-finding, Problem definition, Synthesis},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/YJI9UVHD/Ashby - 2016 - Chapter 3 - Assessing Sustainable Developments Th.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/Q7GXFQQH/B9780081001769000037.html:text/html},
 }
 
@@ -5347,7 +5347,7 @@ techniques.},
 	urldate = {2022-02-07},
 	date = {2020-11-01},
 	langid = {english},
-	keywords = {Energy system modelling, Renewables, Spatial analysis, Transmission expansion},
+	keywords = {Renewables, Energy system modelling, Spatial analysis, Transmission expansion},
 	file = {ScienceDirect Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/3TK5XH9U/Fleischer - 2020 - Minimising the effects of spatial scale reduction .pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/M33CZQ7I/S2211467X20301164.html:text/html},
 }
 
@@ -5561,7 +5561,7 @@ projects in the United States.},
 	langid = {english},
 	note = {Artwork Size: 1 files
 Pages: 1 files},
-	keywords = {01 {COAL}, {LIGNITE}, {AND} {PEAT}, 02 {PETROLEUM}, 03 {NATURAL} {GAS}, 08 {HYDROGEN}, 09 {BIOMASS} {FUELS}, 10 {SYNTHETIC} {FUELS}, 11 {NUCLEAR} {FUEL} {CYCLE} {AND} {FUEL} {MATERIALS}, 13 {HYDRO} {ENERGY}, 14 {SOLAR} {ENERGY}, 15 {GEOTHERMAL} {ENERGY}, 16 {TIDAL} {AND} {WAVE} {POWER}, 17 {WIND} {ENERGY}, 25 {ENERGY} {STORAGE}, 32 {ENERGY} {CONSERVATION}, {CONSUMPTION}, {AND} {UTILIZATION}, 42 {ENGINEERING}, battery energy storage, bioenergy, coal, concentrating solar power, electricity, greenhouse gas emissions, hydropower, life cycle assessment, natural gas, nuclear power, oil, photovoltaic, water power, wind energy},
+	keywords = {life cycle assessment, nuclear power, wind energy, bioenergy, coal, 01 {COAL}, {LIGNITE}, {AND} {PEAT}, 02 {PETROLEUM}, 03 {NATURAL} {GAS}, 08 {HYDROGEN}, 09 {BIOMASS} {FUELS}, 10 {SYNTHETIC} {FUELS}, 11 {NUCLEAR} {FUEL} {CYCLE} {AND} {FUEL} {MATERIALS}, 13 {HYDRO} {ENERGY}, 14 {SOLAR} {ENERGY}, 15 {GEOTHERMAL} {ENERGY}, 16 {TIDAL} {AND} {WAVE} {POWER}, 17 {WIND} {ENERGY}, 25 {ENERGY} {STORAGE}, 32 {ENERGY} {CONSERVATION}, {CONSUMPTION}, {AND} {UTILIZATION}, 42 {ENGINEERING}, battery energy storage, concentrating solar power, electricity, greenhouse gas emissions, hydropower, natural gas, oil, photovoltaic, water power},
 }
 
 @misc{energy_information_administration_capacity_2020,
@@ -5723,7 +5723,7 @@ efficiency.},
 	date = {2021},
 	langid = {english},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ropr.12438},
-	keywords = {cambio climático, climate policy, energía, energy policy, framing, medio ambiente, países desarrollados, renewable energy, state policy, 发达国家, 气候变化, 环境, 能源},
+	keywords = {energy policy, renewable energy, framing, cambio climático, climate policy, energía, medio ambiente, países desarrollados, state policy, 发达国家, 气候变化, 环境, 能源},
 	file = {Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/KK85DEDF/ropr.html:text/html},
 }
 
@@ -5750,7 +5750,7 @@ Primary\_atype: Research
 Publisher: Nature Publishing Group
 Subject\_term: Atmospheric chemistry;Climate and Earth system modelling;Climate-change mitigation;Projection and prediction;{SARS}-{CoV}-2
 Subject\_term\_id: atmospheric-chemistry;climate-and-earth-system-modelling;climate-change-mitigation;projection-and-prediction;sars-cov-2},
-	keywords = {Atmospheric chemistry, Climate and Earth system modelling, Climate-change mitigation, Projection and prediction, {SARS}-{CoV}-2},
+	keywords = {Climate-change mitigation, Projection and prediction, Climate and Earth system modelling, Atmospheric chemistry, {SARS}-{CoV}-2},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RFDFEA7I/Forster et al. - 2020 - Current and future global climate impacts resultin.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/SVMC7NZT/s41558-020-0883-0.html:text/html},
 }
 
@@ -5770,7 +5770,7 @@ This article is part of the theme issue ‘Climate change and ecosystems: threat
 	urldate = {2021-10-29},
 	date = {2020-03-16},
 	note = {Publisher: Royal Society},
-	keywords = {adaptation, biosphere, climate change impacts, mitigation, nature-based solutions, resilience},
+	keywords = {mitigation, resilience, adaptation, biosphere, climate change impacts, nature-based solutions},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/L974AQ9D/Malhi et al. - 2020 - Climate change and ecosystems threats, opportunit.pdf:application/pdf},
 }
 
@@ -6014,7 +6014,7 @@ Subject\_term\_id: energy-justice;energy-supply-and-demand;governance},
 	date = {2015-03-04},
 	note = {Publisher: Routledge
 \_eprint: https://doi.org/10.1080/08941920.2014.933923},
-	keywords = {deficit models, {NIMBY}, renewable energy technology, siting disputes, wind farms},
+	keywords = {wind farms, deficit models, {NIMBY}, renewable energy technology, siting disputes},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/CKTPK69P/Burningham et al. - 2015 - An Array of Deficits Unpacking NIMBY Discourses i.pdf:application/pdf;Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/L97U5CA5/08941920.2014.html:text/html},
 }
 
@@ -6407,7 +6407,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2022-02-11},
 	date = {2021-11-19},
 	langid = {english},
-	keywords = {Aggregation, Capacity expansion, Decomposition, Energy system optimization, {LP}, {MILP}},
+	keywords = {Energy system optimization, Capacity expansion, Aggregation, Decomposition, {LP}, {MILP}},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/2GKSILHV/S266679242100055X.html:text/html;Submitted Version:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/RLT8BBU9/Kotzur et al. - 2021 - A modeler's guide to handle complexity in energy s.pdf:application/pdf},
 }
 
@@ -6456,7 +6456,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2022-02-08},
 	date = {2021-12-01},
 	langid = {english},
-	keywords = {Climate change mitigation, Electricity sector development, Energy poverty, Levelized cost of electricity, Renewable energy},
+	keywords = {Renewable energy, Climate change mitigation, Levelized cost of electricity, Electricity sector development, Energy poverty},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/65BQULZZ/S0140988321005223.html:text/html},
 }
 
@@ -6474,7 +6474,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2022-02-08},
 	date = {2016-06-01},
 	langid = {english},
-	keywords = {Electricity market integration, Impact on electricity markets, Renewables, Support policies},
+	keywords = {Renewables, Electricity market integration, Impact on electricity markets, Support policies},
 	file = {ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/AYJT5U6A/S0301421516300891.html:text/html;Winkler et al. - 2016 - Impact of renewables on electricity markets – Do s.pdf:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/N4WSUJ9Y/Winkler et al. - 2016 - Impact of renewables on electricity markets – Do s.pdf:application/pdf},
 }
 
@@ -6542,7 +6542,7 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	urldate = {2022-02-08},
 	date = {2021-01-01},
 	langid = {english},
-	keywords = {Max-p-regions, Renewables, Spatial aggregation},
+	keywords = {Renewables, Max-p-regions, Spatial aggregation},
 	file = {Full Text:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/AT39I5WD/Fleischer - 2021 - Using the max-p regions problem algorithm to defin.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/AIWUKMJC/S2215016121000030.html:text/html},
 }
 
@@ -14578,7 +14578,7 @@ of Diablo Canyon},
 	date = {2019-12},
 	eprinttype = {arxiv},
 	eprint = {1801.03400},
-	keywords = {Computer Science - Social and Information Networks, Physics - Data Analysis, Statistics and Probability, Physics - Physics and Society, Quantitative Biology - Molecular Networks, Statistics - Applications},
+	keywords = {Computer Science - Social and Information Networks, Physics - Physics and Society, Physics - Data Analysis, Statistics and Probability, Quantitative Biology - Molecular Networks, Statistics - Applications},
 	file = {arXiv Fulltext PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/D4R9V7VX/Broido and Clauset - 2019 - Scale-free networks are rare.pdf:application/pdf;arXiv.org Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/G9TQRXCW/1801.html:text/html},
 }
 
@@ -20389,7 +20389,7 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	date = {2006-01-01},
 	note = {Publisher: Routledge
 \_eprint: https://www.tandfonline.com/doi/pdf/10.1191/1478088706qp063oa},
-	keywords = {epistemology, flexibility, patterns, qualitative psychology, thematic analysis},
+	keywords = {flexibility, epistemology, patterns, qualitative psychology, thematic analysis},
 	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/8TZWXZTQ/Braun and and Clarke - 2006 - Using thematic analysis in psychology.pdf:application/pdf},
 }
 
@@ -20563,4 +20563,87 @@ routes, treatment technologies, and disposal sites is of prime ...},
 	date = {2014-10-08},
 	langid = {english},
 	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/8MNQC8MF/ES Appendix D.pdf:application/pdf},
+}
+
+@article{rachmawati_multiobjective_2009,
+	title = {Multiobjective Evolutionary Algorithm With Controllable Focus on the Knees of the Pareto Front},
+	volume = {13},
+	issn = {1941-0026},
+	url = {https://ieeexplore.ieee.org/document/5208606},
+	doi = {10.1109/TEVC.2009.2017515},
+	abstract = {The optimal solutions of a multiobjective optimization problem correspond to a nondominated front that is characterized by a tradeoff between objectives. A knee region in this Pareto-optimal front, which is visually a convex bulge in the front, is important to decision makers in practical contexts, as it often constitutes the optimum in tradeoff, i.e. substitution of a given Pareto-optimal solution with another solution on the knee region yields the largest improvement per unit degradation. This paper presents a selection scheme that enables a multiobjective evolutionary algorithm ({MOEA}) to obtain a nondominated set with controllable concentration around existing knee regions of the Pareto front. The preference- based focus is achieved by optimizing a set of linear weighted sums of the original objectives, and control of the extent of the focus is attained by careful selection of the weight set based on a user-specified parameter. The fitness scheme could be easily adopted in any Pareto-based {MOEA} with little additional computational cost. Simulations on various two- and three- objective test problems demonstrate the ability of the proposed method to guide the population toward existing knee regions on the Pareto front. Comparison with general-purpose Pareto based {MOEA} demonstrates that convergence on the Pareto front is not compromised by imposing the preference-based bias. The performance of the method in terms of an additional performance metric introduced to measure the accuracy of resulting convergence on the desired regions validates the efficacy of the method.},
+	pages = {810--824},
+	number = {4},
+	journaltitle = {{IEEE} Transactions on Evolutionary Computation},
+	author = {Rachmawati, Lily and Srinivasan, Dipti},
+	urldate = {2025-05-28},
+	date = {2009-08},
+	keywords = {Computational efficiency, Computational modeling, Convergence, Degradation, Evolutionary computation, Genetic algorithms, Knee, Measurement, multiobjective evolutionary algorithm ({MOEA}), multiobjective optimization, Optimal control, Pareto optimization, preference, Testing},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/3GPD8CW9/Rachmawati and Srinivasan - 2009 - Multiobjective Evolutionary Algorithm With Controllable Focus on the Knees of the Pareto Front.pdf:application/pdf},
+}
+
+@article{richter_process_2022,
+	title = {The process to find a process for governance: Nuclear waste management and consent-based siting in the United States},
+	volume = {87},
+	issn = {2214-6296},
+	url = {https://www.sciencedirect.com/science/article/pii/S2214629621005600},
+	doi = {10.1016/j.erss.2021.102473},
+	shorttitle = {The process to find a process for governance},
+	abstract = {In 2013, the United States (U.S.) Department of Energy ({DOE}) attempted to initiate a consent-based siting ({CBS}) approach to better engage diverse publics and thereby begin to remedy a legacy of technocratic decision-making and inequitable public engagement processes plaguing historical high-level nuclear waste siting efforts. {DOE}'s remediation work included a contract with the Expert and Citizen Assessment of Science and Technology ({ECAST}) network to employ participatory technology assessment ({pTA}) to help co-create the {CBS} process with lay publics. In late 2016, the {DOE} terminated the process to develop a {CBS} process. To date, little in the public record explores {DOE}'s novel foray into {CBS}. As researchers on {DOE}'s aborted {ECAST} efforts, we situate the novel {pTA} process to create a {CBS} process amidst the technocratic political-historical context of commercial nuclear waste siting in the U.S. Lessons from {ECAST}'s effort highlight persistent institutional barriers inhibiting U.S. capacity to more equitably approach the challenge of siting nuclear waste facilities. We identify the undermining consequences of {DOE}'s focus on expediency; imposed limitations on the scope of {CBS}; bureaucratic obstacles to public input; a lack of continuity in values across executive administrations; and absence of top-level commitment to procedural and institutional learning, innovation, and adaptation. Through our case history and critical reflection, we aim to inform future efforts in the U.S. and beyond to overcome failed technocratic histories and instead steward participatory, equitable, and democratic processes to manage high-level nuclear waste.},
+	pages = {102473},
+	journaltitle = {Energy Research \& Social Science},
+	shortjournal = {Energy Research \& Social Science},
+	author = {Richter, Jennifer and Bernstein, Michael J. and Farooque, Mahmud},
+	urldate = {2025-05-28},
+	date = {2022-05-01},
+	keywords = {Consent-based siting, Nuclear, Nuclear energy, Nuclear waste, Participatory technology assessment, Public engagement},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/K485J3GZ/Richter et al. - 2022 - The process to find a process for governance Nuclear waste management and consent-based siting in t.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/VJXEQ9VM/S2214629621005600.html:text/html},
+}
+
+@article{tuler_controversy_2023,
+	title = {Controversy and consensus in the design of a consent-based siting process for radioactive waste},
+	volume = {95},
+	issn = {2214-6296},
+	url = {https://www.sciencedirect.com/science/article/pii/S2214629622004091},
+	doi = {10.1016/j.erss.2022.102906},
+	abstract = {Crafting a successful plan to store nuclear waste in the United States from commercial nuclear reactors and defense-related activities has been stymied by multiple technical, social, and political challenges. Recent focus has returned to the role of consent to site a deep geologic repository and interim storage facilities. However, what “consent” means has been left quite vague. We report on an empirical investigation using Q method to identify perspectives about how a consent-based siting process should be designed for one or more deep geologic repositories. We recruited twelve individuals deeply engaged with policy and regulatory questions associated with managing nuclear waste in the United States. Results reveal four perspectives: get to yes expediently, seek acceptance by gaining trust, promote inclusion and transparency for informed community choice, and develop legitimacy for the process and outcomes. Each perspective includes features meant to ensure that core concepts of consent are addressed in a process to site one or more deep geologic repositories: self-determination, understanding, and voluntariness. We discuss how perspectives emphasize them in different ways. We also highlight how perspectives reveal preferences for responding to three challenges raised by the socio-political context: what is the scope of the problem to be addressed, how the process can be protected from external pressure, and how to proceed in a context of social distrust. The perspectives suggest many areas of agreement about how a consent-based process should be designed. However, key differences are also revealed which pose a significant challenge for those that will be responsible for designing a process that achieves the promise of consent.},
+	pages = {102906},
+	journaltitle = {Energy Research \& Social Science},
+	shortjournal = {Energy Research \& Social Science},
+	author = {Tuler, Seth P. and Webler, Thomas},
+	urldate = {2025-05-28},
+	date = {2023-01-01},
+	keywords = {Consent, Decision making, Nuclear waste, Q method, Siting},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/SG2UFXPS/Tuler and Webler - 2023 - Controversy and consensus in the design of a consent-based siting process for radioactive waste.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/QQ7R6DJI/S2214629622004091.html:text/html},
+}
+
+@report{abou-jaoude_meta-analysis_2024,
+	title = {Meta-Analysis of Advanced Nuclear Reactor Cost Estimations},
+	url = {https://www.osti.gov/biblio/2371533},
+	abstract = {Supporting Data can be downloaded at: https://gain.inl.gov/content/uploads/4/2024/06/{INL}-{RPT}-24-77048-R1.xlsx Nuclear energy is a critical cornerstone of the current United States clean energy supply and may play a larger role in the future in support of a transition to a net-zero economy. The current fleet of nuclear reactors predominantly consists of large light-water reactors ({LWRs}), while many of the reactor designs under consideration are smaller and/or different technologies. Because these new designs have not yet been built, there is a high degree of uncertainty associated with their cost. This complicates energy-planning efforts because cost projections are not always standardized, consistent, and centralized in an easily accessible location. To help support energy planning in the {US}, this report provides advanced nuclear cost ranges using a transparent methodology along with other relevant information that can be used to help support decision making and energy planning. The purpose of this work was to conduct a methodical process for cost evaluation using only public information that was vetted with the end-goal to provide reference cost projections for nuclear energy. To provide a solid basis for these values, the approach and assumptions are explicitly laid out throughout the report allowing any user of the data to challenge or reconsider them. Because future {US} nuclear-reactor costs are still unknown due to little recent observed data, the report opted to compile a comprehensive list of bottom-up estimates and evaluate averages/trends within the data to identify reference ranges. This was deemed preferable to opining on the robustness or validity of one cost estimation versus another. To that end, the work evaluated thousands of lines of cost subaccounts from several bottom-up cost estimates. A wide variety of different reactor types captured in the data are of various sizes and technologies. Some of these reactors will be representative of advanced reactors under development while others will not. Thus, the results here are dependent on the data that are available and the accuracy of the estimates that are used. Each bottom-up estimate was reviewed to determine whether it was complete. Incomplete data sets were corrected to ensure an adequate basis of cross-comparison. The report is not without limitations and should be interpreted as an initial step to develop cost ranges for nuclear technology. Ultimately, future work can build upon the methodology with refined cost estimates to reduce uncertainty. {US}-based overnight capital cost ({OCC}) estimates were compiled from extensive data sets into ranges for both large and small reactor sizes for 2030. To project the cost declines over time, learning rates were sampled from literature sources. No {SMRs} were previously built; hence, learning rates based on bottom-up approaches (e.g., by quantifying the impact stemming from fabrication of different components, modular work, site construction, commissioning) were prioritized. For larger reactors, actual learning rates from deployments were used to project future costs (adjusted to account for standardization or lack thereof between designs). Other costs included are fixed and variable operations and maintenance costs. The final variables were capacity factors and ramp rates to support energy planning.},
+	number = {{INL}/{RPT}-24-77048-Rev001},
+	institution = {Idaho National Laboratory ({INL}), Idaho Falls, {ID} (United States)},
+	author = {Abou-Jaoude, Abdalla and Lohse, Christopher Shawn and Larsen, Levi Morin and Guaita, Nahuel and Trivedi, Ishita and Joseck, Frederick Carl and Hoffman, Edward and Stauff, Nicolas and Shirvan, Koroush and Stein, Adam},
+	urldate = {2025-06-02},
+	date = {2024-06-01},
+	doi = {10.2172/2371533},
+	file = {Full Text PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/AK9I6S73/Abou-Jaoude et al. - 2024 - Meta-Analysis of Advanced Nuclear Reactor Cost Estimations.pdf:application/pdf},
+}
+
+@article{walmsley_energy_2018,
+	title = {Energy Ratio analysis and accounting for renewable and non-renewable electricity generation: A review},
+	volume = {98},
+	issn = {1364-0321},
+	url = {https://www.sciencedirect.com/science/article/pii/S1364032118306774},
+	doi = {10.1016/j.rser.2018.09.034},
+	shorttitle = {Energy Ratio analysis and accounting for renewable and non-renewable electricity generation},
+	abstract = {This review collates energy assessment data for the most common electricity generation methods and evaluates five Energy Ratios. The considered ratios are Energy Return on Investment ({EROI}) – standard and external, Energy Payback Time ({EPT}), Primary Energy Factor ({PEF}), and Resource Utilisation Factor ({RUF}). A common energy analysis framework, together with three energy accounting methods based on energy value, exergy, and primary energy, are described. The concept of the time-value for energy as an analogy to the time-value for money is proposed and has a significant impact on the calculated Energy Ratios. In total, this review brings together data for 45 electricity generation projects. Based on the Energy Return on Investment (external), the generation methods fall into three tiers: (1) nuclear, natural gas combined cycle, and geothermal (in New Zealand) with ratios {\textgreater} 30, (2) hydro, wind, and geothermal (in Iceland) with ratios between 5–30, and (3) solar {PV} with ratios less than 5. High Energy Return on Investment ratios correspond to short Energy Payback Times and vice versa. Energy Ratio performance levels for renewable energy generation sources – hydro, wind, geothermal and solar – heavily rely on the quality of the primary natural resource available. This review recommends Energy Return on Investment (external) and Resource Utilisation Factor as the most useful metrics for inclusion in full sustainability assessment.},
+	pages = {328--345},
+	journaltitle = {Renewable and Sustainable Energy Reviews},
+	shortjournal = {Renewable and Sustainable Energy Reviews},
+	author = {Walmsley, Timothy G. and Walmsley, Michael R. W. and Varbanov, Petar S. and Klemeš, Jiří J.},
+	urldate = {2025-06-02},
+	date = {2018-12-01},
+	keywords = {Energy planning, Energy Ratio analysis, Energy Return on Investment, Renewable electricity},
+	file = {PDF:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/PCNES6GM/Walmsley et al. - 2018 - Energy Ratio analysis and accounting for renewable and non-renewable electricity generation A revie.pdf:application/pdf;ScienceDirect Snapshot:/Users/samdotson/Library/CloudStorage/SynologyDrive-sam-cloud/ebooks/Zotero/storage/XD8VVPFT/S1364032118306774.html:text/html},
 }
