--- a/docs/acros.tex
+++ b/docs/acros.tex
@@ -74,4 +74,15 @@
 \acro{du}[DU]{depleted uranium}
 \acro{ru}[RU]{recovered uranium}
 \acro{rth}[RTh]{recovered thorium}
+\acro{ads}[ADS]{accelerator-driven subcritical reactor}
+\acro{msr}[MSR]{molten salt reactor}
+\acro{pwr}[PWR]{pressurized water reactor}
+\acro{bwr}[BWR]{boiling water reactor}
+\acro{lwr}[LWR]{light water reactor}
+\acro{hwr}[HWR]{heavy-water moderated reactor}
+\acro{htgr}[HTGR]{high temperature gas-cooled reactor}
+\acro{sfr}[SFR]{sodium-cooled fast reactor}
+\acro{ffh}[FFH]{fusion hybrid reactor}
+\acro{est}[EST]{Evaluation and Screening Team}
+
 
