--- a/docs/tables/metric_data.tex
+++ b/docs/tables/metric_data.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrr}
 \toprule
- & mass snf hlw disposal [t/GWe-yr] & activity at 100 yrs [Ci/GWe-yr] & activity at 100k years [Ci/GWe-yr] & mass du ru rth disposal [t/GWe-yr] & volume llw disposal [m3] & safety challenges [Data] & land use [km2/GWe-yr] & water use [ML/GWe-yr] & carbon dioxide emissions [CO2/GWe-yr] & total worker dose [person-mSv/GWe-yr] & natural uranium required [t/GWe-yr] & natural thorium utilization [t/GWe-yr] & development cost [Data] & development time [Data] & foak cost [Data] & compatibility [Data] & familiarity [Data] \\
+ & mass snf hlw disposal [t/GWe-yr] & activity at 100 yrs [Ci/GWe-yr] & activity at 100k years [Ci/GWe-yr] & mass du ru rth disposal [t/GWe-yr] & volume llw disposal [m3] & safety challenges [Data] & land use [km2/GWe-yr] & water use [ML/GWe-yr] & carbon dioxide emissions [CO2/GWe-yr] & total worker dose [person-mSv/GWe-yr] & natural uranium required [t/GWe-yr] & natural thorium utilization [t/GWe-yr] & development cost [Data] & development time [Data] & foak cost [Data] & incompatibility [Data] & unfamiliarity [Data] \\
 EG &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
 \midrule
 EG01 & 21.92 & 1340000.00 & 1650.00 & 166.67 & 398.84 & 0.00 & 0.17 & 23891.00 & 44.10 & 1.10 & 188.63 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 & 0.00 \\
