--- a/docs/5-examples/50-intro.tex
+++ b/docs/5-examples/50-intro.tex
@@ -11,7 +11,7 @@
     \item Opposition can be pre-empted with sincere and proactive community engagement.
     \item In the case of nuclear energy, some of these efforts are already underway with concepts such as consent-based siting entering the nuclear zeitgeist.
     \item ???
-    \item Introduce the \ac{set} tool
+    \item Introduce the \ac{set}
     \item  Introduce \ac{osier} as a tool for multi-objective optimization.
 \end{enumerate}
 
@@ -39,6 +39,12 @@ The \ac{set} is an Excel-based application containing metric data from the Nucle
     \item A user can repeat the evaluation and screening process used in the Study that identified the promising options for R\&D, with either the entire set of options (\acp{eg}) or a subset of the options.
     \item A user can explore the effects of varying the relative importance of the criteria on the identification of fuel cycles that might be considered promising for R\&D.
     \item A user can perform an evaluation and screening of fuel cycles specified by the user by developing the metric data according to the information in the final report and adding the data to the SET tool.
+\end{enumerate}
+
+\subsection{Limitations of the \ac{set}}
+\begin{enumerate}
+    \item Does not consider Pareto optimality
+    \item Binning of data leads to information loss
 \end{enumerate}
 
 \subsection{What metrics are available?}
@@ -72,16 +78,75 @@ Table \ref{tab:metric-data} describes the data for the simulation.
 
 \subsection{Results}
 
+Table \ref{tab:summary-data} summarizes the results from the \ac{set} and \ac{osier} simulation.
+
+\begin{table}[ht!]
+    \centering
+    \caption{Summary of \ac{set} and \ac{osier} data.}
+    \label{tab:summary-data}
+    \resizebox*{0.75\textwidth}{!}{\input{tables/summary_data.tex}}
+\end{table}
+
+
+Figure \ref{fig:full-set-space} compares the performance of all \acp{eg}.
+
+\begin{figure}[ht!]
+  \centering
+  \resizebox{\columnwidth}{!}{\input{figures/05_examples_chapter/full_set_plot.pgf}}
+  \caption{The Pareto front for the \ac{set}.}
+  \label{fig:full-set-space}
+\end{figure}
+
+Figure \ref{fig:once-through-set-space} highlights the evaluation groups representing once-through
+fuel cycles.
+
+\begin{figure}[ht!]
+  \centering
+  \resizebox{\columnwidth}{!}{\input{figures/05_examples_chapter/once-through_set_plot.pgf}}
+  \caption{The \ac{set} Pareto front with once-through fuel cycles highlighted.}
+  \label{fig:once-through-set-space}
+\end{figure}
+
+Decision makers are frequently interested in ``compromise'' solutions or points where objective 
+tradeoffs are highest. The \ac{mcda} literature refers sometimes refers to these solutions as ``knee''
+solutions \cite{rachmawati_multiobjective_2009}. \ac{pymoo} (and thereby \ac{osier}) offers a method
+to calculate these solutions by identifying the solutions which minimize the ``tradeoff'' among all
+other solutions. Figure \ref{fig:single-eg-set-space} identifies the a ``knee'' solution with this method.
+
+\begin{figure}[ht!]
+  \centering
+  \resizebox{\columnwidth}{!}{\input{figures/05_examples_chapter/single-eg_set_plot.pgf}}
+  \caption{A high tradeoff ``knee'' solution from the \acp{eg} in the \ac{set}.}
+  \label{fig:single-eg-set-space}
+\end{figure}
+
+Due to the implicit assumption that all fuel cycles and evaluation groups are mutually exclusive,
+the complete set of solutions in design space is given by the identity matrix of size $40 \times 40$.
+
+\begin{figure}[ht!]
+  \centering
+  \resizebox{\columnwidth}{!}{\input{figures/05_examples_chapter/non_optimal_set_plot.pgf}}
+  \caption{The set of non-Pareto optimal solutions given by the \ac{set}.}
+  \label{fig:single-eg-set-space}
+\end{figure}
+
+
 \subsection{Discussion}
 
-% \section{Example 2: Powering a Data Center}
+\section{Example 2: Powering a Data Center}
 
-% \subsection{Why data centers?}
+\subsection{Why data centers?}
 
-% \subsection{What technology options exist?}
+\subsection{What technology options exist?}
 
-% \subsection{Data for the simulation}
+\subsection{Data for the simulation}
 
-% \subsection{Results}
+The data for this simulation are provided by this table from Walmsley et al. 2018 \cite{walmsley_energy_2018}. This method
+accounts for the time value of energy using an energy value accounting method. I also selected the \acs{eroi}$_std$ for the simulation
+which accounts for the self-use of inputs by the generating technology.
 
-% \subsection{Discussion}
+\textcolor{red}{I chose monocrystalline-silicone technology for solar panels since this technology was used \ac{nrel}'s \ac{atb}.}
+
+\subsection{Results}
+
+\subsection{Discussion}
