adds fuel cycle plot

--- a/docs/5-examples/50-intro.tex
+++ b/docs/5-examples/50-intro.tex
@@ -31,6 +31,14 @@
 
 \subsection{Overview of the Nuclear Fuel Cycle}
 
+\begin{figure}[htbp!]
+  \centering
+  \resizebox{\columnwidth}{!}{\input{figures/05_examples_chapter/fuel_cycle}}
+  \caption{Overview of the nuclear fuel cycle. Arrows indicate the flow of materials through the fuel cycle. 
+  Dashed lines correspond to a closed fuel cycle.}
+  \label{fig:nuclear-fuel-cycle}
+\end{figure}
+
 \subsection{What is the \ac{set}?}
 
 The \ac{set} is an Excel-based application containing metric data from the Nuclear Fuel Cycle Evaluation and Screening Study
